--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,5 +16,7 @@
     <string name="action_log_out">Log Out</string>
     <string name="action_post_alert">Alert</string>
     <string name="map_toolbar">Map Toolbar</string>
+    <string name="action_settings">Settings</string>
+    <string name="section_format">Hello World from section: %1$d</string>
 
 </resources>
